<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuMovieFM"
        android:title="@string/movie"
        android:icon="@drawable/ic_baseline_local_movies_24"/>
    <item
        android:id="@+id/menuTVShowFM"
        android:title="@string/tvshow"
        android:icon="@drawable/ic_baseline_tv_24"/>
</menu>